# Prueba_tecnica_analitico_2025

./: .PyPipEnv.bat  .gitignore  MANIFEST.in  PyRun.bat  README.md  requirements.txt  setup.cfg  setup.py
000_documentación/: Documentación modelo.docx  Metadata.xlsx  veco-opeco-modelo-opcion-pagos.docx
001_insumos/: prueba_op_base_pivot_var_rpta_alt_enmascarado_oot.csv
002_resultados/: resultado_prueba.csv  sumision_2.csv
src/veco_opeco_modelo_opcion_pagos/: __init__.py  _version.py  ejecucion.py  etl.py
src/veco_opeco_modelo_opcion_pagos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/veco_opeco_modelo_opcion_pagos/static/: config.json
src/veco_opeco_modelo_opcion_pagos/static/model/: propension_pago.pkl
src/veco_opeco_modelo_opcion_pagos/static/sql/000_entrenamiento/: 001_integracion_tablas.sql  002_integracion_tablas.sql
src/veco_opeco_modelo_opcion_pagos/static/sql/000_test/: 001_alimentar_datos.sql  002_alimentar_datos.sql
src/veco_opeco_modelo_opcion_pagos/static/sql/002_diponibilizacion/: 001_prediccion.sql
