[versioneer]
VCS = git
style = pep440
versionfile_source = src/veco_opeco_modelo_opcion_pagos/_version.py
versionfile_build = veco_opeco_modelo_opcion_pagos/_version.py
tag_prefix = ''

[metadata]
name = veco-opeco-modelo-opcion-pagos
author = juajaram
author_email = juajaram@bancolombia.com.co
description = Modelo de opcin de pagos, etiqueta prospectos clientes para ofrecer opciones de pagos a las obligaciones
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7.0, <3.11.0
include_package_data = True
install_requires =
    openpyxl>=3.1.2
    master-validation>=2.5.3
    pyodbc>=4.0.35
    orquestador2>=1.2.2
    veco-opeco-respaldologs>=1.1.3

[options.package_data]
* = static/*.json, static/sql/*.sql, static/sql/ExtractTransformLoad/*.sql

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    veco_opeco_modelo_opcion_pagos = veco_opeco_modelo_opcion_pagos.ejecucion:main